@@ -5068,9 +5068,6 @@ EOF
    (lambda ()
      (cleanup-before-exit))))
 
-;; OBSOLETE: remove after bootstrapping
-(define ##sys#implicit-exit-handler chicken.base#implicit-exit-handler)
-
 (define ##sys#reset-handler ; Exposed by chicken.repl
   (make-parameter
    (lambda ()
@@ -6463,203 +6460,3 @@ EOF
   (##core#primitive "C_return_to_host"))
 
 ) ; chicken.platform
-
-
-
-;;; OBSOLETE: Remove after bootstrapping.  This ensures the unprefixed
-;;; names are still bound to the correct definitions, because "scheme"
-;;; in the bootstrapping compiler's modules.scm may still refer to
-;;; them by the unprefixed name.
-(##sys#setslot 'not 0 scheme#not)
-(##sys#setslot 'boolean? 0 scheme#boolean?)
-(##sys#setslot 'eq? 0 scheme#eq?)
-(##sys#setslot 'eqv? 0 scheme#eqv?)
-(##sys#setslot 'equal? 0 scheme#equal?)
-(##sys#setslot 'pair? 0 scheme#pair?)
-(##sys#setslot 'cons 0 scheme#cons)
-(##sys#setslot 'car 0 scheme#car)
-(##sys#setslot 'cdr 0 scheme#cdr)
-(##sys#setslot 'caar 0 scheme#caar)
-(##sys#setslot 'cadr 0 scheme#cadr)
-(##sys#setslot 'cdar 0 scheme#cdar)
-(##sys#setslot 'cddr 0 scheme#cddr)
-(##sys#setslot 'caaar 0 scheme#caaar)
-(##sys#setslot 'caadr 0 scheme#caadr)
-(##sys#setslot 'cadar 0 scheme#cadar)
-(##sys#setslot 'caddr 0 scheme#caddr)
-(##sys#setslot 'cdaar 0 scheme#cdaar)
-(##sys#setslot 'cdadr 0 scheme#cdadr)
-(##sys#setslot 'cddar 0 scheme#cddar)
-(##sys#setslot 'cdddr 0 scheme#cdddr)
-(##sys#setslot 'caaaar 0 scheme#caaaar)
-(##sys#setslot 'caaadr 0 scheme#caaadr)
-(##sys#setslot 'caadar 0 scheme#caadar)
-(##sys#setslot 'caaddr 0 scheme#caaddr)
-(##sys#setslot 'cadaar 0 scheme#cadaar)
-(##sys#setslot 'cadadr 0 scheme#cadadr)
-(##sys#setslot 'caddar 0 scheme#caddar)
-(##sys#setslot 'cadddr 0 scheme#cadddr)
-(##sys#setslot 'cdaaar 0 scheme#cdaaar)
-(##sys#setslot 'cdaadr 0 scheme#cdaadr)
-(##sys#setslot 'cdadar 0 scheme#cdadar)
-(##sys#setslot 'cdaddr 0 scheme#cdaddr)
-(##sys#setslot 'cddaar 0 scheme#cddaar)
-(##sys#setslot 'cddadr 0 scheme#cddadr)
-(##sys#setslot 'cdddar 0 scheme#cdddar)
-(##sys#setslot 'cddddr 0 scheme#cddddr)
-(##sys#setslot 'set-car! 0 scheme#set-car!)
-(##sys#setslot 'set-cdr! 0 scheme#set-cdr!)
-(##sys#setslot 'null? 0 scheme#null?)
-(##sys#setslot 'list? 0 scheme#list?)
-(##sys#setslot 'list 0 scheme#list)
-(##sys#setslot 'length 0 scheme#length)
-(##sys#setslot 'list-tail 0 scheme#list-tail)
-(##sys#setslot 'list-ref 0 scheme#list-ref)
-(##sys#setslot 'append 0 scheme#append)
-(##sys#setslot 'reverse 0 scheme#reverse)
-(##sys#setslot 'memq 0 scheme#memq)
-(##sys#setslot 'memv 0 scheme#memv)
-(##sys#setslot 'member 0 scheme#member)
-(##sys#setslot 'assq 0 scheme#assq)
-(##sys#setslot 'assv 0 scheme#assv)
-(##sys#setslot 'assoc 0 scheme#assoc)
-(##sys#setslot 'symbol? 0 scheme#symbol?)
-(##sys#setslot 'symbol->string 0 scheme#symbol->string)
-(##sys#setslot 'string->symbol 0 scheme#string->symbol)
-(##sys#setslot 'number? 0 scheme#number?)
-(##sys#setslot 'integer? 0 scheme#integer?)
-(##sys#setslot 'exact? 0 scheme#exact?)
-(##sys#setslot 'real? 0 scheme#real?)
-(##sys#setslot 'complex? 0 scheme#complex?)
-(##sys#setslot 'inexact? 0 scheme#inexact?)
-(##sys#setslot 'rational? 0 scheme#rational?)
-(##sys#setslot 'zero? 0 scheme#zero?)
-(##sys#setslot 'odd? 0 scheme#odd?)
-(##sys#setslot 'even? 0 scheme#even?)
-(##sys#setslot 'positive? 0 scheme#positive?)
-(##sys#setslot 'negative? 0 scheme#negative?)
-(##sys#setslot 'max 0 scheme#max)
-(##sys#setslot 'min 0 scheme#min)
-(##sys#setslot '+ 0 scheme#+)
-(##sys#setslot '- 0 scheme#-)
-(##sys#setslot '* 0 scheme#*)
-(##sys#setslot '/ 0 scheme#/)
-(##sys#setslot '= 0 scheme#=)
-(##sys#setslot '> 0 scheme#>)
-(##sys#setslot '< 0 scheme#<)
-(##sys#setslot '>= 0 scheme#>=)
-(##sys#setslot '<= 0 scheme#<=)
-(##sys#setslot 'quotient 0 scheme#quotient)
-(##sys#setslot 'remainder 0 scheme#remainder)
-(##sys#setslot 'modulo 0 scheme#modulo)
-(##sys#setslot 'gcd 0 scheme#gcd)
-(##sys#setslot 'lcm 0 scheme#lcm)
-(##sys#setslot 'abs 0 scheme#abs)
-(##sys#setslot 'floor 0 scheme#floor)
-(##sys#setslot 'ceiling 0 scheme#ceiling)
-(##sys#setslot 'truncate 0 scheme#truncate)
-(##sys#setslot 'round 0 scheme#round)
-(##sys#setslot 'rationalize 0 scheme#rationalize)
-(##sys#setslot 'exact->inexact 0 scheme#exact->inexact)
-(##sys#setslot 'inexact->exact 0 scheme#inexact->exact)
-(##sys#setslot 'exp 0 scheme#exp)
-(##sys#setslot 'log 0 scheme#log)
-(##sys#setslot 'expt 0 scheme#expt)
-(##sys#setslot 'sqrt 0 scheme#sqrt)
-(##sys#setslot 'sin 0 scheme#sin)
-(##sys#setslot 'cos 0 scheme#cos)
-(##sys#setslot 'tan 0 scheme#tan)
-(##sys#setslot 'asin 0 scheme#asin)
-(##sys#setslot 'acos 0 scheme#acos)
-(##sys#setslot 'atan 0 scheme#atan)
-(##sys#setslot 'number->string 0 scheme#number->string)
-(##sys#setslot 'string->number 0 scheme#string->number)
-(##sys#setslot 'char? 0 scheme#char?)
-(##sys#setslot 'char=? 0 scheme#char=?)
-(##sys#setslot 'char>? 0 scheme#char>?)
-(##sys#setslot 'char<? 0 scheme#char<?)
-(##sys#setslot 'char>=? 0 scheme#char>=?)
-(##sys#setslot 'char<=? 0 scheme#char<=?)
-(##sys#setslot 'char-ci=? 0 scheme#char-ci=?)
-(##sys#setslot 'char-ci<? 0 scheme#char-ci<?)
-(##sys#setslot 'char-ci>? 0 scheme#char-ci>?)
-(##sys#setslot 'char-ci>=? 0 scheme#char-ci>=?)
-(##sys#setslot 'char-ci<=? 0 scheme#char-ci<=?)
-(##sys#setslot 'char-alphabetic? 0 scheme#char-alphabetic?)
-(##sys#setslot 'char-whitespace? 0 scheme#char-whitespace?)
-(##sys#setslot 'char-numeric? 0 scheme#char-numeric?)
-(##sys#setslot 'char-upper-case? 0 scheme#char-upper-case?)
-(##sys#setslot 'char-lower-case? 0 scheme#char-lower-case?)
-(##sys#setslot 'char-upcase 0 scheme#char-upcase)
-(##sys#setslot 'char-downcase 0 scheme#char-downcase)
-(##sys#setslot 'char->integer 0 scheme#char->integer)
-(##sys#setslot 'integer->char 0 scheme#integer->char)
-(##sys#setslot 'string? 0 scheme#string?)
-(##sys#setslot 'string=? 0 scheme#string=?)
-(##sys#setslot 'string>? 0 scheme#string>?)
-(##sys#setslot 'string<? 0 scheme#string<?)
-(##sys#setslot 'string>=? 0 scheme#string>=?)
-(##sys#setslot 'string<=? 0 scheme#string<=?)
-(##sys#setslot 'string-ci=? 0 scheme#string-ci=?)
-(##sys#setslot 'string-ci<? 0 scheme#string-ci<?)
-(##sys#setslot 'string-ci>? 0 scheme#string-ci>?)
-(##sys#setslot 'string-ci>=? 0 scheme#string-ci>=?)
-(##sys#setslot 'string-ci<=? 0 scheme#string-ci<=?)
-(##sys#setslot 'make-string 0 scheme#make-string)
-(##sys#setslot 'string-length 0 scheme#string-length)
-(##sys#setslot 'string-ref 0 scheme#string-ref)
-(##sys#setslot 'string-set! 0 scheme#string-set!)
-(##sys#setslot 'string-append 0 scheme#string-append)
-(##sys#setslot 'string-copy 0 scheme#string-copy)
-(##sys#setslot 'string->list 0 scheme#string->list)
-(##sys#setslot 'list->string 0 scheme#list->string)
-(##sys#setslot 'substring 0 scheme#substring)
-(##sys#setslot 'string-fill! 0 scheme#string-fill!)
-(##sys#setslot 'vector? 0 scheme#vector?)
-(##sys#setslot 'make-vector 0 scheme#make-vector)
-(##sys#setslot 'vector-ref 0 scheme#vector-ref)
-(##sys#setslot 'vector-set! 0 scheme#vector-set!)
-(##sys#setslot 'string 0 scheme#string)
-(##sys#setslot 'vector 0 scheme#vector)
-(##sys#setslot 'vector-length 0 scheme#vector-length)
-(##sys#setslot 'vector->list 0 scheme#vector->list)
-(##sys#setslot 'list->vector 0 scheme#list->vector)
-(##sys#setslot 'vector-fill! 0 scheme#vector-fill!)
-(##sys#setslot 'procedure? 0 scheme#procedure?)
-(##sys#setslot 'map 0 scheme#map)
-(##sys#setslot 'for-each 0 scheme#for-each)
-(##sys#setslot 'apply 0 scheme#apply)
-(##sys#setslot 'force 0 scheme#force)
-(##sys#setslot 'call-with-current-continuation 0 scheme#call-with-current-continuation)
-(##sys#setslot 'input-port? 0 scheme#input-port?)
-(##sys#setslot 'output-port? 0 scheme#output-port?)
-(##sys#setslot 'current-input-port 0 scheme#current-input-port)
-(##sys#setslot 'current-output-port 0 scheme#current-output-port)
-(##sys#setslot 'call-with-input-file 0 scheme#call-with-input-file)
-(##sys#setslot 'call-with-output-file 0 scheme#call-with-output-file)
-(##sys#setslot 'open-input-file 0 scheme#open-input-file)
-(##sys#setslot 'open-output-file 0 scheme#open-output-file)
-(##sys#setslot 'close-input-port 0 scheme#close-input-port)
-(##sys#setslot 'close-output-port 0 scheme#close-output-port)
-(##sys#setslot 'read 0 scheme#read)
-(##sys#setslot 'read-char 0 scheme#read-char)
-(##sys#setslot 'peek-char 0 scheme#peek-char)
-(##sys#setslot 'write 0 scheme#write)
-(##sys#setslot 'display 0 scheme#display)
-(##sys#setslot 'write-char 0 scheme#write-char)
-(##sys#setslot 'newline 0 scheme#newline)
-(##sys#setslot 'eof-object? 0 scheme#eof-object?)
-(##sys#setslot 'with-input-from-file 0 scheme#with-input-from-file)
-(##sys#setslot 'with-output-to-file 0 scheme#with-output-to-file)
-(##sys#setslot 'char-ready? 0 scheme#char-ready?)
-(##sys#setslot 'imag-part 0 scheme#imag-part)
-(##sys#setslot 'real-part 0 scheme#real-part)
-(##sys#setslot 'make-rectangular 0 scheme#make-rectangular)
-(##sys#setslot 'make-polar 0 scheme#make-polar)
-(##sys#setslot 'angle 0 scheme#angle)
-(##sys#setslot 'magnitude 0 scheme#magnitude)
-(##sys#setslot 'numerator 0 scheme#numerator)
-(##sys#setslot 'denominator 0 scheme#denominator)
-(##sys#setslot 'dynamic-wind 0 scheme#dynamic-wind)
-(##sys#setslot 'values 0 scheme#values)
-(##sys#setslot 'call-with-values 0 scheme#call-with-values)
