@@ -88,6 +88,8 @@
 - Syntax expander
   - Removed support for (define-syntax (foo e r c) ...), which was
     undocumented and not officially supported anyway.
+  - Removed support for normal "lambda" forms as syntax transformers,
+    which has been deprecated since 4.8.0.
   - define and friends are now aggressively rejected in "expression
     contexts" (i.e., anywhere but toplevel or as internal defines).
   - define-record and define-record-type now create record types
